# cargo-dirty

./: Cargo.toml  README.md  rust-toolchain.toml  shell.nix
src/: dirty_analyzer.rs  fingerprint_parser.rs  lib.rs  main.rs  rebuild_graph.rs  rebuild_reason.rs  rebuild_reporter.rs
src/analysis/: analyzer.rs  graph.rs  mod.rs  reporter.rs
src/parsing/: mod.rs  parser.rs  rebuild_reason.rs
tests/: cli_interface_tests.rs  parser.rs  parser_combinators_tests.rs  rebuild_detection_tests.rs  rebuild_reason_tests.rs  reporter.rs  trigger_detection.rs
