[package]
authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
description = "A tool to analyze why Cargo rebuilds your project often."
edition = "2024"
keywords = ["compilation", "cargo", "fingerprint", "helper", "tool"]
license = "MIT"
name = "cargo-dirty"
repository = "https://github.com/wvhulle/cargo-dirty"
version = "0.0.3"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"


[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
complexity = { level = "warn", priority = -1 }
pedantic = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

absolute_paths = "deny"
allow_attributes_without_reason = "deny"
branches_sharing_code = "deny"
collapsible_else_if = "deny"
collapsible_if = "deny"
explicit_counter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_identity = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "allow"
manual_clamp = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_map = "deny"
manual_ok_or = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
# manual_saturating_arithmetic = "deny"
manual_unwrap_or = "deny"
manual_while_let_some = "deny"
map_err_ignore = "deny"
map_flatten = "deny"
map_unwrap_or = "deny"
match_bool = "deny"
missing_assert_message = "deny"
missing_const_for_fn = "deny"
# mod_module_files = "deny"
# module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
# mutex_atomic = "deny"
needless_bool = "deny"
needless_bool_assign = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_range_loop = "deny"
option_if_let_else = "deny"
option_map_or_none = "deny"
panic_in_result_fn = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_pub_crate = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
significant_drop_tightening = "deny"
single_match_else = "deny"
single_option_map = "deny"
too_long_first_doc_paragraph = "deny"
trait_duplication_in_bounds = "deny"
trivial_regex = "deny"
type_repetition_in_bounds = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_mut_passed = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
verbose_file_reads = "deny"
